tests/baselines/reference/generatorTypeCheck26.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck26.ts(3,12): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck26.ts (1 errors) ====
    function* g(): IterableIterator<(x: string) => number> {
        yield x => x.length;
        yield *[x => x.length];
               ~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        return x => x.length;
    }